policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: curl
spec:
  endpointSelector:
    matchLabels:
      app: curl
  egress:
  - toFQDNs:
    - matchName: "api.twitter.com"
